...
      "title": "Hesap",
      "deleteAccount": "Hesabı Sil"
    }
  },
  "language": {
    "turkish": "Türkçe",
    "english": "English"
  },
  "memberSince": {
    "newMember": "Yeni üye",
    "since": "{{date}}'ten beri"
  },
  "feedbackEmail": {
...
